--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <body>
     <header>
+
       <nav id ="navbar" class="navbar navbar-expand-sm navbar-light fixed-top">
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav">
@@ -36,9 +37,12 @@
           </ul>
         </div>
       </nav>
+
       <div>
         <h1>Hugo Vayr</h1>
+
         <div id="line"></div>
+
         <h2>Développeur</h2>
 
         <div class="container">
@@ -48,18 +52,40 @@
             <h5><i class="fa fa-compass"> Dunkerque</i></h5>
             <h5><i class="fa fa-phone"> 06 51 22 28 06</i></h5>
           </div>
+
           <div class="d-none d-md-block col-md-6">
             <span class="typed"></span>
           </div>
+
           <div class="col-6 col-md-3 photo">
             <img src="./media/IMG_20211221_010201.jpg" alt="Photo-Candidat" width="120%"/>
           </div>
         </div>
+
         <div class="button">
           <a href="./media/CV.pdf" target="_blank">CV en PDF</a>
         </div>
       </div>
     </header>
+
+    <section id="langages">
+      <h3>Langages & frameworks</h3>
+
+      <div>
+        <div class="bar"><img src="media/html.png" alt="html-icon"> 
+          HTML
+        </div>
+      
+        <div class="progress-bar progress-bar-striped progress-bar-animated" 
+        role="progressbar" aria-valuenow="92" aria-valuemin="0" 
+        aria-valuemax="100" style="width: 92%; background-color: #ff8000;">
+          92%
+        </div>
+
+      </div>
+
+    </section>
+
     <script src="./assets/js/jquery.min.js" type="text/javascript"></script>
     <script src="./assets/js/typed.min.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
