--- a/index.html
+++ b/index.html
@@ -75,11 +75,64 @@
         <div class="bar"><img src="media/html.png" alt="html-icon"> 
           HTML
         </div>
-      
         <div class="progress-bar progress-bar-striped progress-bar-animated" 
         role="progressbar" aria-valuenow="92" aria-valuemin="0" 
         aria-valuemax="100" style="width: 92%; background-color: #ff8000;">
           92%
+        </div>
+
+        <div class="bar"><img src="media/css.png" alt="css-icon"> 
+          CSS
+        </div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated" 
+        role="progressbar" aria-valuenow="77" aria-valuemin="0" 
+        aria-valuemax="100" style="width: 77%; background-color: #0080FF;">
+          77%
+        </div>
+
+        <div class="bar"><img src="media/js.png" alt="js-icon"> 
+          JavaScript
+        </div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated" 
+        role="progressbar" aria-valuenow="50" aria-valuemin="0" 
+        aria-valuemax="100" style="width: 50%; background-color: #ecce48;">
+          50%
+        </div>
+
+        <div class="bar"><img src="media/bootstrap.png" alt="bootstrap-icon"> 
+          Boostrap
+        </div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated" 
+        role="progressbar" aria-valuenow="65" aria-valuemin="0" 
+        aria-valuemax="100" style="width: 65%; background-color: #5858FA;">
+          65%
+        </div>
+
+        <div class="bar"><img src="media/sass.png" alt="sass-icon"> 
+          Sass
+        </div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated" 
+        role="progressbar" aria-valuenow="20" aria-valuemin="0" 
+        aria-valuemax="100" style="width: 20%; background-color: #df0101;">
+          20%
+        </div>
+
+        <div class="bar"><img src="media/react.png" alt="react-icon"> 
+          React
+        </div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated" 
+        role="progressbar" aria-valuenow="30" aria-valuemin="0" 
+        aria-valuemax="100" style="width: 30%; background-color: #5edafd;">
+          30%
+        </div>
+
+        <div class="bar"><img src="media/php.png" alt="html-icon"> 
+          PHP
+        </div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated" 
+        role="progressbar" aria-valuenow="80" aria-valuemin="0" 
+        aria-valuemax="100" style="width: 80%; background-color: #0404b4;">
+          80%
         </div>
 
       </div>
@@ -89,8 +142,6 @@
     <script src="./assets/js/jquery.min.js" type="text/javascript"></script>
     <script src="./assets/js/typed.min.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex distinctio molestiae fugit fuga voluptatibus quasi perspiciatis est illum quod. Quos minus temporibus ratione sunt adipisci ducimus asperiores eveniet pariatur fugit eius nemo totam recusandae est molestiae unde quia cum expedita corrupti fugiat enim accusantium ipsum delectus, eligendi at. Recusandae maxime ullam facere dolore earum! Neque quasi est tempora a, quas praesentium itaque nobis blanditiis, alias ad ea, molestiae adipisci sequi sapiente laborum. Ipsam, sit aspernatur amet odio modi placeat maxime eius saepe praesentium quisquam officiis ab iste provident harum assumenda asperiores et aliquid! Sapiente quae, ullam et nesciunt accusamus rem architecto accusantium qui exercitationem unde at suscipit hic libero deserunt excepturi, dolorem ab nobis. Officia alias, ea nam natus consequatur quasi quia dolores provident, voluptate rerum reprehenderit. Quis repellat quisquam nam maiores harum eveniet, commodi sed, ullam necessitatibus aut distinctio totam iusto ad cum quam facilis rem reiciendis id mollitia, odit dolore praesentium optio sint dolores! Nam nihil esse incidunt nobis porro tenetur? Similique, quaerat doloremque at fugit debitis esse accusamus totam unde error fugiat? Totam odit architecto laboriosam iure cupiditate? Sequi harum deleniti esse alias, a amet labore libero ad eum obcaecati, hic tempore assumenda, ducimus ratione quo consequuntur odit error dolorem officiis? Placeat debitis quae commodi optio, vel harum impedit facere, veniam, ipsa sint nostrum molestias ullam pariatur distinctio repudiandae nobis consequuntur obcaecati aliquid esse? Quas dolores quos sapiente neque magnam. Praesentium veniam officia nisi nemo cupiditate debitis, velit unde commodi minima quibusdam facere deserunt sed, atque ex libero nostrum fugit, hic doloribus fugiat obcaecati. Cupiditate magni rem harum vitae deserunt necessitatibus, eaque qui. Explicabo voluptates unde cum facere hic autem recusandae quae neque fugiat similique, minus suscipit magni? Ducimus libero nihil voluptatem accusamus atque ad minima eligendi, hic facilis quas impedit fugiat, deserunt placeat? Modi veniam ea voluptatibus laboriosam explicabo. Assumenda provident sequi tenetur illum iste necessitatibus reiciendis alias, commodi quaerat non quisquam, ratione blanditiis, velit vel laudantium illo excepturi sit delectus explicabo. Doloremque recusandae laudantium consequuntur et ut sint officiis facilis veniam, a nulla quo aliquam in omnis amet error officia similique suscipit quaerat nesciunt maxime dolor. Asperiores vero nobis mollitia repellat incidunt nemo, illum deserunt molestiae amet consectetur? Id quasi ex, ut temporibus obcaecati quae similique illo qui dolorem quia! Tempore sit mollitia cumque voluptas repellendus deleniti maxime ipsa adipisci hic alias commodi fugiat, dolor, ducimus veniam amet itaque sequi inventore rerum eum magnam, a libero perspiciatis? Reiciendis blanditiis exercitationem magni laborum amet, nulla rem animi nihil, fuga quam praesentium vel optio unde repellat quod officiis error tenetur odio laudantium molestias expedita consequatur temporibus aliquam. Placeat repudiandae porro quasi sed quis, dolorum, repellendus facere, ut ab laudantium iure quam alias! Possimus voluptate reiciendis, harum reprehenderit cum sed ut voluptatem distinctio amet omnis temporibus doloribus a, quasi sint ipsum porro? Laboriosam minus aliquam fugit, ducimus omnis ut rerum facilis nisi. Aspernatur officia temporibus fugiat esse obcaecati atque dignissimos debitis vel, architecto quaerat? Atque quia qui consequuntur dicta, impedit odit ex reprehenderit nesciunt vitae a ipsam ut.
-    </p>
+    
   </body>
 </html>
