polygone - progress bar

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           30%
         </div>
 
-        <div class="bar"><img src="media/php.png" alt="html-icon"> 
+        <div class="bar"><img src="media/php.png" alt="php-icon"> 
           PHP
         </div>
         <div class="progress-bar progress-bar-striped progress-bar-animated" 
