--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img src="./media/IMG_20211221_010201.jpg" alt="Photo-Candidat" width="120%"/>
           </div>
         </div>
-
+    
         <div class="button">
           <a href="./media/CV.pdf" target="_blank">CV en PDF</a>
         </div>
@@ -139,14 +139,62 @@
 
     </section>
 
+    <section id="formation">
+      <h3>FORMATION</h3>
+
+      <div>
+        <div id="autodidacte">
+          <h4><i class ="fa fa-university"></i> Apprentissage autodidacte</h4>
+          <div class ="counter">
+            <div class="data">
+              <div class="counter-value" data-count="">0</div>
+              <span>Heures de code</span>
+            </div>
+            <div class="data">
+              <div class="counter-value" data-count="">0</div>
+              <span>Projet réalisés</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        <div id="fcc">
+            <h4><i class ="fa fa-university"></i> FreeCodeCamp.com</h4>
+            <div class ="counter">
+              <div class="data">
+                <div class="counter-value" data-count="">0</div>
+                <span>coding challenge</span>
+              </div>
+              <div class="data">
+                <div class="counter-value" data-count="">0</div>
+                <span>Projets</span>
+              </div>
+            </div>
+          </div>
+      </div>
+
+      <div>
+        <div id="occ">
+            <h4><i class ="fa fa-university"></i> Udemy</h4>
+            <div class ="counter">
+              <div class="data">
+                <div class="counter-value" data-count="">0</div>
+                <span>Cours suivis</span>
+              </div>
+              <div class="data">
+                <div class="counter-value" data-count="">0</div>
+                <span>Cours terminés</span>
+              </div>
+            </div>
+          </div>
+      </div>
+
+    </section>
+
     <script src="./assets/js/jquery.min.js" type="text/javascript"></script>
     <script src="./assets/js/typed.min.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
-<<<<<<< HEAD
-  
-=======
-    
->>>>>>> 36778497bef867f032c6867d9e806d6a98c6d178
+
   </body>
 </html>
- 
