--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
           <h4><i class ="fa fa-university"></i> Apprentissage autodidacte</h4>
           <div class ="counter">
             <div class="data">
-              <div class="counter-value" data-count="">0</div>
+              <div class="counter-value" data-count="1207">0</div>
               <span>Heures de code</span>
             </div>
             <div class="data">
-              <div class="counter-value" data-count="">0</div>
+              <div class="counter-value" data-count="31">0</div>
               <span>Projet réalisés</span>
             </div>
           </div>
@@ -163,11 +163,11 @@
             <h4><i class ="fa fa-university"></i> FreeCodeCamp.com</h4>
             <div class ="counter">
               <div class="data">
-                <div class="counter-value" data-count="">0</div>
+                <div class="counter-value" data-count="1210">0</div>
                 <span>coding challenge</span>
               </div>
               <div class="data">
-                <div class="counter-value" data-count="">0</div>
+                <div class="counter-value" data-count="12">0</div>
                 <span>Projets</span>
               </div>
             </div>
@@ -179,11 +179,11 @@
             <h4><i class ="fa fa-university"></i> Udemy</h4>
             <div class ="counter">
               <div class="data">
-                <div class="counter-value" data-count="">0</div>
+                <div class="counter-value" data-count="265">0</div>
                 <span>Cours suivis</span>
               </div>
               <div class="data">
-                <div class="counter-value" data-count="">0</div>
+                <div class="counter-value" data-count="3">0</div>
                 <span>Cours terminés</span>
               </div>
             </div>
