--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
     />
+    <link href="./assets/aos/aos.css" rel="stylesheet">
 
   </head>
 
@@ -40,7 +41,7 @@
       </nav>
 
       <div>
-        <h1>Hugo Vayr</h1>
+        <h1 class="aos-item" data-aos="zoom-in-right">Hugo Vayr</h1>
 
         <div id="line"></div>
 
@@ -265,6 +266,7 @@
     <script src="./assets/js/jquery.min.js" type="text/javascript"></script>
     <script src="./assets/js/typed.min.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
+    <script src="./assets/aos/aos.js" type="text/javascript"></script>
 
   </body>
 </html>
